@@ -1,3 +1,8 @@
+2002-02-12  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* config/tc-hppa.c (hppa_fix_adjustable): Don't adjust final types
+	that implicitly use LR and RR selectors.
+
 2002-02-12  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/tc-mn10300.c (other_registers): Added `epsw'.  Mark `pc'
